[gd_scene load_steps=2 format=3 uid="uid://duraiq0ffrwc0"]

[ext_resource type="Script" path="res://components/status_component.gd" id="1_ifiom"]

[node name="StatusComponent" type="Marker2D"]
script = ExtResource("1_ifiom")

[node name="CullTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="effect_ended" from="." to="." method="cull_gfx"]
[connection signal="timeout" from="CullTimer" to="." method="cull_timers"]
